--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,6 +81,7 @@ nav:
     - 'Shield': 'basics/first-setup/shield-first-setup.md'
     - 'Turris 1.X and Omnia': 'basics/first-setup/simple-setup.md'
 - Software:
+    - Dashboard: 'basics/dashboard.md'
     - Data Collection:
         - Introduction: 'basics/collect/collect.md'
         - Dynamic Firewall: 'basics/collect/dynfw/collect-dynfw.md'
